--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="de.tilosp.robotremote">
+          xmlns:tools="http://schemas.android.com/tools" package="de.tilosp.robotremote">
 
     <application
             android:allowBackup="true"
@@ -10,13 +10,18 @@
             android:theme="@style/AppTheme">
         <activity
                 android:name=".MainActivity"
-                android:label="@string/app_name"
+                android:label="@string/activity_main"
                 android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity
+                android:name=".SettingsActivity"
+                android:label="@string/activity_settings"
+                android:parentActivityName=".MainActivity" tools:ignore="UnusedAttribute">
         </activity>
     </application>
 
